Fixed mobile horizontal overflow

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,11 +1,18 @@
 html {
     font-family: 'Baloo Thambi', cursive;
     -ms-text-size-adjust: 100%;
+    width: auto!important;
+    overflow-x: hidden!important;
     -webkit-text-size-adjust: 100%;
+    width: 100%;
 }
 
 body {
     margin: 0;
+    width: auto!important;
+    overflow-x: hidden!important;
+    width: 100%;
+    padding: 0;
 }
 
 article,
@@ -243,6 +250,8 @@ body {
     color: hsla(0, 0%, 0%, 0.8);
     font-family: 'Baloo Thambi', cursive;
     font-weight: normal;
+    width: auto!important;
+    overflow-x: hidden!important;
     word-wrap: break-word;
     font-kerning: normal;
     -moz-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
